<resources>
    <string name="app_name">Login Odoo</string>
    <string name="pref_title_sync_refresh_delay">Sync. Refresh Delay</string>
    <string name="pref_sync_refresh_delay_default">180000</string>
    <string name="label_self_hosted_url">self-hosted URL</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_bla">....</string>
    <string name="label_dbname">DB name</string>
    <string name="label_logout">LOGOUT</string>
</resources>
